# Firman

./: Makefile  README.md  pyproject.toml  setup.py
firman/: action_util.py  find_bbs.py  find_func.py  firman.py  gen_config.py  instr_tracker.py  int_dat  interrupts.py  mem_color.py  mmio_finder.py  ref_config.json  stmt_parser.py  summarizer.py  util.py
firmwares/: bb_find.py
firmwares/Console/: Console.elf_analysis.json
firmwares/Drone/: inp  out
firmwares/Gateway/: Gateway.info
firmwares/PLC/: PLC.info
tests/: test_find_func.py
